# euler-haskell

./: README.md  euler-haskell.cabal
src/: Euler.hs
test/: EulerSpec.hs
